# origami-arm-sim

./: .gitignore  README.md  citation.cff
origami_ws/src/origami_sim/: CMakeLists.txt  package.xml  setup.py
origami_ws/src/origami_sim/config/: soft_robot_sim_config.yaml
origami_ws/src/origami_sim/launch/: sim.launch
origami_ws/src/origami_sim/scripts/: continuum_misc.py  origami_sim_vis.py  plot.py  sim_FK.py  simulation_control_interface.py
